fixed padding on mobile

--- a/style.css
+++ b/style.css
@@ -173,7 +173,7 @@ div.fadeIn {
     width:100vw;
     display:flex;
     flex-direction: column;
-    padding-left: 35%;
+    padding-left: 225px;
 }
 
 button {
